--- a/main/static/css/style.css
+++ b/main/static/css/style.css
@@ -2365,3 +2365,9 @@ label.error {
     text-decoration: none;
     font-weight: bolder;
 }
+
+.sponsor-logo {
+    height:100px;
+    width:100px;
+    overflow:hidden;
+}
