Arreglados problemas con el formulariario de subida de papers

--- a/main/static/css/style.css
+++ b/main/static/css/style.css
@@ -125,6 +125,10 @@ a:hover, a:active, a:focus {
     color: #fff;
 }
 
+textarea {
+    height:150px !important;
+}
+
 hr {
     width: 20px;
     border-top:1px solid #fe4918;
