Plantilla VMC para varios años

--- a/templates/2016/blocks/sponsors.html
+++ b/templates/2016/blocks/sponsors.html
@@ -25,7 +25,7 @@ src="static/img/patrocinio/paisdigital.png" alt="Logo Fundación País Digital" 
 
           </ul>
           <div class="btn-wrapper">
-            <a href="{% url 'become_sponsor' %}" class="btn btn-sm btn-primary" target="_blank">Auspiciar/patrocinar este evento</a>
+            <a href="{% url 'become_sponsor' year%}" class="btn btn-sm btn-primary" target="_blank">Auspiciar/patrocinar este evento</a>
           </div>
         </div>
     </div>
