Agrega filtro por version al admin

--- a/templates/2015/index.html
+++ b/templates/2015/index.html
@@ -334,8 +334,8 @@
         <br/>
         <div class="row">
           <ul class="list-inline">
-            <li><a href="http://www.usm.cl" target="_blank"><img class="org-logo" src="static/img/patrocinio/utfsm.png" alt="Logo U T F S M" /></a></li>
-            <li><a href="http://www.inf.utfsm.cl" target="_blank"><img class="org-logo" src="static/img/patrocinio/di.jpg" alt="Logo D I" /></a></li>
+                       <li><a href="http://www.usm.cl" target="_blank"><img class="org-logo" src="{% static 'img/patrocinio/utfsm.png' %}" alt="Logo U T F S M" /></a></li>
+            <li><a href="http://www.inf.utfsm.cl" target="_blank"><img class="org-logo" src="{% static 'img/patrocinio/di.jpg' %}" alt="Logo D I" /></a></li>
           </ul>
         </div>
     </div>
