--- a/templates/2015/blocks/programa.html
+++ b/templates/2015/blocks/programa.html
@@ -15,19 +15,19 @@
           <li class="active">
             <a href="#DayOne" data-toggle="tab">
               <div class="title">Día 1</div>
-              <div class="subtitle">04/11/2016</div>
+              <div class="subtitle">09/10/2015</div>
             </a>
           </li>
           <li>
             <a href="#DayTwo" data-toggle="tab">
               <div class="title">Día 2</div>
-              <div class="subtitle">05/11/2016</div>
+              <div class="subtitle">10/10/2015</div>
             </a>
           </li>
           <li>
             <a href="#HackNight" data-toggle="tab">
               <div class="title">Hackathon</div>
-              <div class="subtitle">4-5/11/2016</div>
+              <div class="subtitle">9-10/10/2015</div>
             </a>
           </li>
         </ul>
@@ -45,7 +45,7 @@
               </li>
               {% comment %}
               <li>
-                <a href="#DayOne-2" data-toggle="tab">Talleres - F-106</a>
+                <a href="#DayOne-2" data-toggle="tab">Talleres - F-106/DTI</a>
               </li>
               {% endcomment %}
             </ul>
