Min fix en logo

--- a/templates/2016/index.html
+++ b/templates/2016/index.html
@@ -317,10 +317,10 @@
         <div class="container-fluid no-padding">
             <section>
                 <div class="row" id="home">
-                    <div class="col-md-12 slider text-center">
+                    <div class="col-md-12 slider text-center" style="background-image: url({% static bg %});">
                         <div class="overlay_home">
                             <h1 class="site_title">
-                  <img src="{% static '2016/img/logo_white.png' %}" alt="Logo VMC">
+                  <img src="{% static '2016/img/logo_white.png' %}" alt="Logo VMC" id="main_logo">
                 </h1>
                             <h3>4-5 de Noviembre de 2016</h3>
                             <ul class="shortcuts">
