--- a/main/static/2016/css/layout.css
+++ b/main/static/2016/css/layout.css
@@ -1,3 +1,6 @@
+#main_logo {
+    max-height: 350px;
+}
 #partners_list {
     background-color: white;
 }
@@ -89,7 +92,6 @@
     margin-left: 280px;
 }
 .slider {
-    background: url(../img/bg02.jpg) fixed;
     padding: 0px;
     background-size: cover;
 }
