Mejora el uso de los modals para enviar formularios

--- a/main/static/2016/css/layout.css
+++ b/main/static/2016/css/layout.css
@@ -10,6 +10,10 @@
 .modal .form-group div {
     margin-bottom: 10px;
 }
+.modal .form-buttons {
+    text-align: right;
+    margin-right: 15px;
+}
 #lateral-logo {
     max-width: 40%;
 }
