Muestra mensajes de error en formularios de mensaje

--- a/main/static/2016/css/layout.css
+++ b/main/static/2016/css/layout.css
@@ -10,6 +10,9 @@
 .modal .form-group div {
     margin-bottom: 10px;
 }
+.modal .form-group .form-error {
+    line-height: 1.8;
+}
 .modal .form-buttons {
     text-align: right;
     margin-right: 15px;
